# pysprinkle_srv

./: pyproject.toml
server/: __init__.py  auth.py  circuits.py  schema.sql  sprinklers.py  tasks.py  tz_manipulation.py
server/static/: style.css
server/templates/: base.html
server/templates/circuits/: circuits.html
server/templates/sprinklers/: sprinklers.html
server/templates/tasks/: index.html
